update TuscanyContextListener to proposed Webapp component model
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@505646 13f79535-47bb-0310-9956-ffa450edef68