@@ -18,15 +18,19 @@
  */
 package org.apache.tuscany.runtime.webapp;
 
-import java.net.URL;
 import java.lang.reflect.Method;
+import java.net.URL;
+import java.net.URI;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletContextEvent;
 
 import junit.framework.TestCase;
-import static org.easymock.classextension.EasyMock.*;
-
-import org.apache.tuscany.host.MonitorFactory;
+import static org.easymock.classextension.EasyMock.createMock;
+import static org.easymock.classextension.EasyMock.eq;
+import static org.easymock.classextension.EasyMock.expect;
+import static org.easymock.classextension.EasyMock.isA;
+import static org.easymock.classextension.EasyMock.replay;
+import static org.easymock.classextension.EasyMock.verify;
 
 /**
  * @version $Rev$ $Date$
@@ -37,10 +41,8 @@ public class TuscanyContextListenerTestCase extends TestCase {
     private ClassLoader cl;
     private ClassLoader bootClassLoader;
     private URL systemUrl;
-    private URL applicationUrl;
-    private Method getUtilsMethod;
-    private MonitorFactory monitorFactory;
     private WebappUtil utils;
+    private URI componentId;
 
     public void testInitializationUsingDefaults() throws Exception {
         ServletContextEvent event = createMock(ServletContextEvent.class);
@@ -52,11 +54,10 @@ public class TuscanyContextListenerTestCase extends TestCase {
         expect(utils.getInitParameter("tuscany.online", "true")).andReturn("true");
         expect(utils.getRuntime(bootClassLoader)).andReturn(runtime);
         expect(utils.getSystemScdl(bootClassLoader)).andReturn(systemUrl);
-        expect(utils.getApplicationScdl(cl)).andReturn(applicationUrl);
-        expect(utils.getApplicationName()).andReturn("application");
         replay(utils);
 
         expect(context.getResource("/WEB-INF/tuscany/")).andReturn(null);
+        expect(context.getInitParameter("tuscany.component")).andReturn(componentId.toString());
         context.setAttribute(eq(Constants.RUNTIME_ATTRIBUTE), isA(WebappRuntime.class));
         replay(context);
         replay(cl);
@@ -67,11 +68,8 @@ public class TuscanyContextListenerTestCase extends TestCase {
         runtime.setRuntimeInfo(isA(WebappRuntimeInfo.class));
         runtime.setHostClassLoader(cl);
         runtime.setSystemScdl(systemUrl);
-/*
-        runtime.setApplicationName("application");
-        runtime.setApplicationScdl(applicationUrl);
-*/
         runtime.initialize();
+        runtime.bindComponent(componentId);
         replay(runtime);
 
         ClassLoader oldCl = Thread.currentThread().getContextClassLoader();
@@ -82,6 +80,7 @@ public class TuscanyContextListenerTestCase extends TestCase {
             Thread.currentThread().setContextClassLoader(oldCl);
         }
         verify(event);
+        verify(utils);
         verify(context);
         verify(listener);
         verify(cl);
@@ -91,14 +90,13 @@ public class TuscanyContextListenerTestCase extends TestCase {
 
     protected void setUp() throws Exception {
         super.setUp();
-        getUtilsMethod = TuscanyContextListener.class.getDeclaredMethod("getUtils", ServletContext.class);
+        Method getUtilsMethod = TuscanyContextListener.class.getDeclaredMethod("getUtils", ServletContext.class);
         utils = createMock(WebappUtil.class);
         listener = createMock(TuscanyContextListener.class, new Method[]{getUtilsMethod});
         context = createMock(ServletContext.class);
         cl = createMock(ClassLoader.class);
         bootClassLoader = createMock(ClassLoader.class);
         systemUrl = new URL("file:/system.scdl");
-        applicationUrl = new URL("file:/application.scdl");
-        monitorFactory = createMock(MonitorFactory.class);
+        componentId = URI.create("http://example.com/aComponent");
     }
 }
